[gd_scene load_steps=3 format=3 uid="uid://dqdei7ua1qtt0"]

[ext_resource type="Script" path="res://myproject/GraphNode.gd" id="1_2w7tr"]
[ext_resource type="Texture2D" uid="uid://duqkjr1s1hhx8" path="res://myproject/trashcan.png" id="2_2s1ao"]

[node name="GraphNode" type="GraphNode" groups=["MotifNode"]]
offset_right = 942.0
offset_bottom = 276.0
ignore_invalid_connection_type = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("1_2w7tr")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="GraphNodeNameEdit" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "GraphNode Name"

[node name="DeleteButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("2_2s1ao")

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ChordProgressionEdit" type="LineEdit" parent="VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Chord Progression"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Category 1"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Placeholder"
expand_to_text_length = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Category 2"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "Placeholder"
expand_to_text_length = true

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Category 3"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "Placeholder"
expand_to_text_length = true

[node name="NotesEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Description:"
wrap_mode = 1
scroll_fit_content_height = true

[node name="AddMotifButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Add"

[node name="MotifHolder" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Node" type="Node" parent="."]

[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="pressed" from="HBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
